Closed Bug 564717 Opened 15 years ago Closed 15 years ago

warning: functions defined but not used in xpcmodule.cpp

Categories

(Core :: XPConnect, defect)

defect
Not set
trivial

Tracking

()

RESOLVED FIXED

People

(Reporter: timeless, Assigned: timeless)

Details

Attachments

(1 file)

building with: ac_add_options --disable-libxul js/src/xpconnect/src/../loader/mozJSLoaderConstructors.h 60: warning: ‘nsresult RegisterJSLoader(nsIComponentManager*, nsIFile*, const char*, const char*, const nsModuleComponentInfo*)’ defined but not used 76: warning: ‘nsresult UnregisterJSLoader(nsIComponentManager*, nsIFile*, const char*, const nsModuleComponentInfo*)’ defined but not used 97: warning: ‘nsresult mozJSComponentLoaderConstructor(nsISupports*, const nsIID&, void**)’ defined but not used 100: warning: ‘nsresult mozJSSubScriptLoaderConstructor(nsISupports*, const nsIID&, void**)’ defined but not used
Attached patch patchSplinter Review
Assignee: nobody → timeless
Status: NEW → ASSIGNED
Attachment #444327 - Flags: review?(ted.mielczarek)
Attachment #444327 - Flags: review?(ted.mielczarek) → review?(mrbkap)
Attachment #444327 - Flags: review?(mrbkap) → review+
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: