Bug 564717 warning: functions defined but not used in xpcmodule.cpp r=mrbkap