js/src/xpconnect/loader/mozJSLoaderConstructors.h
@@ -45,6 +45,7 @@
 #define NO_SUBSCRIPT_LOADER
 #endif
 
+#if defined XPCONNECT_STANDALONE || !defined XPCONNECT_MODULE
 #include "mozilla/ModuleUtils.h"
 #include "nsICategoryManager.h"
 #include "mozJSComponentLoader.h"
@@ -58,4 +59,5 @@ NS_GENERIC_FACTORY_CONSTRUCTOR(mozJSComponentLoader)
 
 #ifndef NO_SUBSCRIPT_LOADER
 NS_GENERIC_FACTORY_CONSTRUCTOR(mozJSSubScriptLoader)
+#endif
 #endif
